# BreezeChameleon

./: BreezeChameleon_fedora.spec  CMakeLists.txt  ChangeLog  NEWS  README.md  breeze.h  breeze.json  breezebutton.cpp  breezebutton.h  breezechameleon.json  breezedecoration.cpp  breezedecoration.h  breezeexceptionlist.cpp  breezesettingsdata.kcfg  imgmetal.h
config/: CMakeLists.txt  breezeconfigwidget.cpp  breezeexceptiondialog.cpp  kcm_breezechameleon.cpp  kcm_breezechameleon.json
config/ui/: breezeconfigurationui.ui  breezeexceptiondialog.ui
libbreezecommon/: CMakeLists.txt
